# sandbox

./: .bazelignore  .bazelproject  .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  README.md  WORKSPACE  go_repositories.bzl
.circleci/: config.yml
.github/: CODEOWNERS
Go/: README.md
Java/: .gitignore  README.md
Java/JavalinDemo/: settings.gradle
Java/JettyDemo/: README.md  pom.xml
JavalinDemo/: build.gradle  settings.gradle
JettyDemo/: pom.xml
Python/: README.md
Python/theButton/: button.py
TheNewBoston/Basics/: youtube.java
booleans/: main.go
ch05_control-structures/Fah2Cel/: main.go
ch05_control-structures/FizzBuzz/: main.go
ch06_arrays-slices-maps/arrAvg/: main.go
ch06_arrays-slices-maps/findSmallest/: main.go
ch06_arrays-slices-maps/mapElements/: main.go
ch07_functions/variadicFunctions/: main.go
code_playground/goroutine_WaitGroup/: main.go
code_playground/math_functions/: README.md
code_playground/merge_two_string_slices/: main.go
dev/: time-bazel.sh
dev/pre-commit/: bazel_buildifier_fmt.sh  go_fmt.sh
enterNumber/: main.go
flaskr/: setup.py
flaskr/flaskr/: flaskr.py  flaskr_tests.py
flaskr/flaskr.egg-info/: SOURCES.txt
go_by_example/: 02_values.go  05_for.go
gotime/: CHANGELOG.md  README.md  go.mod  main.go
gotime/cmd/: hello.go  now.go  parse.go  root.go  say.go  version.go
hello/: hello.go
humanize/: BUILD  go.mod  main.go
internal/crud/: README.md
mapElements/: main.go
multivar/: main.go
rules/: BUILD.bazel  proto.bzl
vinyl/: .gitignore  BUILD  README.md  go.mod  main.go
(+177 files in other folders)
